--- a/manifests/base/rbac.yaml
+++ b/manifests/base/rbac.yaml
@@ -62,6 +62,19 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - "apps"
+    resources:
+      - deployments
+    verbs:
+      - get
+      - list
+      - watch
+      - update
+  - nonResourceURLs:
+    - /metrics
+    verbs:
+    - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
