--- a/manifests/base/service.yaml
+++ b/manifests/base/service.yaml
@@ -5,12 +5,11 @@ metadata:
   name: metrics-server
   namespace: kube-system
   labels:
-    kubernetes.io/name: "Metrics-server"
-    kubernetes.io/cluster-service: "true"
+    k8s-app: metrics-server
 spec:
   selector:
     k8s-app: metrics-server
   ports:
   - port: 443
     protocol: TCP
-    targetPort: main-port
+    targetPort: https
